Small sizing and alignment fixes
CHANGELOG_BEGIN
CHANGELOG_END

--- a/docs/theme/sass/_theme_variables.sass
+++ b/docs/theme/sass/_theme_variables.sass
@@ -7,7 +7,7 @@
 $font-awesome-dir:                    "../fonts/"
 $static-img:                          "../img/"
 
-$nav-content-width:                   800px
+$nav-content-width:                   745px
 $nav-media-query:                     (($nav-desktop-width) + ($nav-content-width))
 
 $mathjax-color:                       $text-color
